<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="bot.box.covidtracker.util.AppUtility" />

        <variable
            name="viewModel"
            type="bot.box.covidtracker.ui.viewmodel.HomeViewModel" />
    </data>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/parent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_collapseMode="parallax"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gL_vertical_begin_22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/_20sdp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gL_vertical_end_22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/_20sdp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLastUpdated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:text="@{AppUtility.INSTANCE.relativeTime(viewModel._mStateWise.lastupdatedtime)}"
                app:layout_constraintBottom_toBottomOf="@id/template_today"
                app:layout_constraintEnd_toEndOf="@id/gL_vertical_end_22"
                app:layout_constraintTop_toTopOf="@id/template_today" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/template_today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/today"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/gL_vertical_begin_22"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/template_confirmed_today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_14sdp"
                android:text="@string/confirmed"
                app:layout_constraintEnd_toStartOf="@+id/template_recovered_today"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/template_today" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/template_recovered_today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_14sdp"
                android:text="@string/recovered"
                app:layout_constraintEnd_toStartOf="@+id/template_deceased_today"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/template_confirmed_today"
                app:layout_constraintTop_toBottomOf="@id/template_today" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/template_deceased_today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_14sdp"
                android:text="@string/deceased"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/template_recovered_today"
                app:layout_constraintTop_toBottomOf="@id/template_today" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvConfirmedToday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@{viewModel._mStateWise.deltaconfirmed}"
                app:layout_constraintEnd_toEndOf="@id/template_confirmed_today"
                app:layout_constraintStart_toStartOf="@id/template_confirmed_today"
                app:layout_constraintTop_toBottomOf="@id/template_confirmed_today" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvRecoveredToday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@{viewModel._mStateWise.deltarecovered}"
                app:layout_constraintEnd_toEndOf="@id/template_recovered_today"
                app:layout_constraintStart_toStartOf="@id/template_recovered_today"
                app:layout_constraintTop_toBottomOf="@id/template_recovered_today" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDeceasedToday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@{viewModel._mStateWise.deltadeaths}"
                app:layout_constraintEnd_toEndOf="@id/template_deceased_today"
                app:layout_constraintStart_toStartOf="@id/template_deceased_today"
                app:layout_constraintTop_toBottomOf="@id/template_deceased_today" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/template_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/total"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/gL_vertical_begin_22"
                app:layout_constraintTop_toBottomOf="@id/tvConfirmedToday" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/template_confirmed_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_14sdp"
                android:text="@string/confirmed"
                app:layout_constraintEnd_toStartOf="@+id/template_recovered_total"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/template_total" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/template_recovered_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_14sdp"
                android:text="@string/recovered"
                app:layout_constraintEnd_toStartOf="@+id/template_deceased_total"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/template_confirmed_total"
                app:layout_constraintTop_toBottomOf="@id/template_total" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/template_deceased_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_14sdp"
                android:text="@string/deceased"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/template_recovered_total"
                app:layout_constraintTop_toBottomOf="@id/template_total" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvConfirmedTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@{viewModel._mStateWise.confirmed}"
                app:layout_constraintEnd_toEndOf="@id/template_confirmed_total"
                app:layout_constraintStart_toStartOf="@id/template_confirmed_total"
                app:layout_constraintTop_toBottomOf="@id/template_confirmed_total" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvRecoveredTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@{viewModel._mStateWise.recovered}"
                app:layout_constraintEnd_toEndOf="@id/template_recovered_total"
                app:layout_constraintStart_toStartOf="@id/template_recovered_total"
                app:layout_constraintTop_toBottomOf="@id/template_recovered_total" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDeceasedTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@{viewModel._mStateWise.deaths}"
                app:layout_constraintEnd_toEndOf="@id/template_deceased_total"
                app:layout_constraintStart_toStartOf="@id/template_deceased_total"
                app:layout_constraintTop_toBottomOf="@id/template_deceased_total" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/mRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:clipToPadding="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvConfirmedTotal" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</layout>